--- a/style.css
+++ b/style.css
@@ -69,11 +69,11 @@ margin: 4px auto;
     z-index: 1;
     left: 0;
     transform: translateY(-50%);
+animation: slide-back 0.4s;
 }
 
 .light #switch button {
-    right: 0;
-    left: initial;
+   animation: slide-in 0.4s forwards;
 }
 
 #switch span{
@@ -137,4 +137,22 @@ footer{
 padding: 24px 0;
 text-align: center;
 font-size: 14px;
+}
+
+@keyframes slide-in {
+    from {
+        left: 0;
+    }
+    to {
+        left: 50%;
+    }
+}
+
+@keyframes slide-back {
+    from {
+        left: 50%;
+    }
+    to {
+        left: 0;
+    }
 }
