--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 :root {
     --text-color: white;
-    --bg-url: url(./assets/bg-mobile.jpg);
+    --bg-url: url(./assets/bg-dark2.png);
     --stroke-color: rgba(255, 255, 255, 0.5);
     --surface-color: rgbargba(255, 255, 255, 0.05);
     --surface-color-hover: rgba(0 ,0 ,0 ,0.02);
@@ -15,7 +15,7 @@
 }
 .light{
     --text-color: black;
-    --bg-url: url(./assets/bg-mobile-light.jpg);
+    --bg-url: url(./assets/bg-light2.jpg);
     --stroke-color: rgba(0, 0, 0, 0.5);
     --surface-color: rgba(0, 0, 0, 0.05);
     --surface-color-hover: rgba(0 ,0 ,0 ,0.02);
